k8s/base/promtail.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: promtail
spec:
  selector:
    matchLabels:
      app: promtail
  template:
    metadata:
      labels:
        app: promtail
    spec:
      containers:
        - name: promtail
          image: promtail
          args:
            - "-config.file=/etc/promtail/config.yml"
          volumeMounts:
            - name: promtail-config
              mountPath: /etc/promtail
            - name: varlog
              mountPath: /var/log
      volumes:
        - name: promtail-config
          configMap:
            name: promtail-config
            items:
              - key: promtail-config.yml
                path: config.yml
        - name: varlog
          hostPath:
            path: /var/log
